# AndroidOpengl

./: .gitignore  build.gradle  settings.gradle
ArtFilter/: build.gradle
ArtFilter/src/main/: AndroidManifest.xml
ArtFilter/src/main/jni/: Android.mk  com_spore_meitu_jni_ImageUtilEngine.c  com_spore_meitu_jni_ImageUtilEngine.h
HiPraiseAnimation/: build.gradle
NativeGLESView/: build.gradle
NativeGLESView/src/main/jni/: NativeGles.cpp
NativeGLESViewWithEGL/: build.gradle
NativeGL_demo/: CMakeLists.txt  build.gradle
NativeGL_demo/src/main/assets/vertex/: transform_vertex_shader.glsl
NativeGL_demo/src/main/cpp/: GLRenderer.cpp  GLrenderS.cpp  GLrenderS.h
NativeGL_demo/src/main/cpp/graphics/: GLUtils.cpp
NativeGL_demo/src/main/cpp/include/: terror.h
NativeGL_demo/src/main/java/xingkong/demo/nativegl_demo/: Utils.java
NativeGL_demo/src/main/res/layout/: activity_main.xml
OpenGLES_FBO/: build.gradle
OpenGLShatterAnim/: build.gradle
OpenGLShatterAnim/src/main/: AndroidManifest.xml
OpenGlES_Blend/: build.gradle
OpenGlES_Circle/: build.gradle
OpenGlES_Illumination/: build.gradle
OpenGlES_StencilTest/: build.gradle
OpenGlES_Texture/: build.gradle
OpenGlES_Texture2/: build.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
facetune/: CMakeLists.txt  build.gradle
facetune/src/main/: AndroidManifest.xml
facetune/src/main/assets/fragment/: transform_fragment_shader.glsl
facetune/src/main/cpp/facetune/: beauty_jni.cpp  beauty_jni.h  textureeffect.cpp  textureeffect.h
facetune/src/main/cpp/graphics/: GLUtils.cpp
facetune/src/main/cpp/include/: beautitune.h  tcomdef.h  tsoffscreen.h
facetune/src/main/java/com/ufotosoft/facetune/: MainActivity.java
facetune/src/main/java/com/ufotosoft/facetune/gles/: BaseGLTextureView.java  EGLLogWrapper.java  EffectRender.java  EglContextWrapper.java  EglHelper.java  EglHelperAPI17.java  EglHelperFactory.java  FileLogger.java  FileUtil.java  GLTextureView.java  GLTextureViewImpl.java  GLThread.java  GLViewRenderer.java  IEglHelper.java  ShaderUtils.java  TextureViewHelper.java  Utils.java
facetune/src/main/java/com/ufotosoft/facetune/scaleutil/: DensityUtil.java  ImageRender.java  MatrixAnimation.java  Util.java
facetune/src/main/res/layout/: activity_main.xml  camera_panel_progress.xml  layout_gltextureview.xml  main.xml
facetune/src/main/res/values/: strings.xml
gestureviewbinder/: build.gradle
gradle/wrapper/: gradle-wrapper.properties
grafika/: build.gradle
heightmap/: build.gradle
hipraiseanimationlib/: build.gradle
improvedmallet/: build.gradle
learnopengles/: build.gradle
learnopenglescpp/: CMakeLists.txt  build.gradle
learnopenglescpp/src/main/: AndroidManifest.xml
learnopenglescpp/src/main/assets/vertex/: facetune_vertex_shader.glsl  gray_vertex_shader.glsl
learnopenglescpp/src/main/cpp/: samplecode.cpp
learnopenglescpp/src/main/cpp/facetune/: facetune.cpp  facetune.h  facetune_jni.cpp  textureeffect.cpp  textureeffect.h
learnopenglescpp/src/main/cpp/include/: beautitune.h
learnopenglescpp/src/main/java/com/learnopengles/android/: FacetuneActivity.java  FileLogger.java  FileUtil.java  MyApplication.java
learnopenglescpp/src/main/java/com/learnopengles/android/gles/: BaseGLTextureView.java  EGLLogWrapper.java  EffectRender.java  EglContextWrapper.java  EglHelper.java  EglHelperAPI17.java  EglHelperFactory.java  GLTextureView.java  GLTextureViewImpl.java  GLThread.java  GLViewRenderer.java  IEglHelper.java
learnopenglescpp/src/main/java/com/learnopengles/android/lesson1/: LessonOneNativeRenderer.java
learnopenglescpp/src/main/java/com/learnopengles/android/render/: ImageRender.java  ImageSurfaceView.java  TestScaleActivity.java  TextureImplctivity.java  TextureViewHelper.java
learnopenglescpp/src/main/java/com/learnopengles/android/scaleutil/: DensityUtil.java  GestureView.java  GestureViewBinder.java  MatrixAnimation.java  ScaleGestureBinder.java  ScaleGestureListener.java  ScaledImageView.java  ScrollGestureBinder.java  ScrollGestureListener.java  Util.java
learnopenglescpp/src/main/res/drawable/: circle_shape.xml
learnopenglescpp/src/main/res/layout/: activity_facetune.xml  activity_test_scale.xml  activity_texture_implctivity.xml  ui.xml  ui2.xml
learnopenglescpp/src/main/res/values/: strings.xml  styles.xml
photoeditor/: build.gradle  proguard-rules.pro
photoeditor/jni/: Android.mk  Application.mk
photoeditor/jni/base/: Android.mk  Application.mk  BGRNV21.c  BGRNV21.h  CpuABI.cpp  JpegUtils.cpp  TSAlgorithm.cpp  TSDl.cpp  TSJpeg.cpp  TSJpeg.h  android_forjpeg.txt  cache_util_jni.cpp  com_cam001_util_ImageUtil.h  debug.cpp  debug.h  image-util.cpp  image_rotate_jni.cpp  imageprocess.cpp  jPoint.cpp  shader_util_jni.cpp  zoom.c  zoom.h
photoeditor/jni/base/inc/: CpuABI.h  TSDl.h  imageprocess.h  tsoffscreen.h
photoeditor/jni/beauty/: Android.mk  Application.mk  MakeupEngine.cpp  NV21Sampler_jni.cpp  NV21Sampler_jni.h  edit_bitmap_jni.cpp  edit_bitmap_jni.h  face_detect_jni.cpp  face_detect_jni.h  facial_marks_track_jni.cpp  facial_marks_track_jni.h  jRect.h  makeup.cpp  tool.cpp  ts_makeup_data.h  ts_makeup_engine.cpp  ts_makeup_engine.h  ts_makeup_image.h  utils.cpp  utils.h
photoeditor/jni/beauty/inc/: FaceBeautify.h  FaceDetection.h  TBilateraDenoise.cpp  TBilateraDenoise.h  TxAlgo.h  TxCamShift.h  TxConf.h  TxDebug.h  TxError.h  TxFaceWarp.h  TxImage.h  TxImageProc.h  TxKitBase.h  TxKitCore.h  TxMath.h  TxMatrix.h  TxMemAuto.h  TxMemPool.h  TxMemory.h  TxObjDetect.h  TxObjTrack.h  TxSkinDetect.h  TxSkinSmooth.h  TxTPSWarp.h  TxTrack.h  TxType.h  TxVector.h  avefskindetect.h  base-object.hpp  face-detection.h  facewarp.h  facewhiten.h  makeup.h  (+14 more)
photoeditor/jni/makeup/: Android.mk  Application.mk  NV21Sampler_jni.cpp  NV21Sampler_jni.h  cosmetic.cpp  cosmetic.h  edit_bitmap_jni.cpp  edit_bitmap_jni.h  fmtconvert.h  jPoint.cpp  jPoint.h  jRect.cpp  jStyle.cpp  jStyle.h  loadpng.cpp  modeldata.cpp  tsmakeuprt_engine_jni.cpp  tsmakeuprt_engine_jni.h
photoeditor/src/main/: AndroidManifest.xml
takingnewxtstep/: build.gradle
(+803 files in other folders)
